Update SCSS import to use default theme if not specified

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import "{{ site.theme }}";
+@import "{{ site.theme | default: 'default' }}";
 
 // Modern clean styling
 // Updated body styling for LaTeX-like appearance
