--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title | default: "Site" }}</title>
   <link rel="stylesheet" href="/assets/css/style.css">
+  {% if page.math %}
+    <script type="text/javascript" async
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
+  {% endif %}
 </head>
 <body>
   {{ content }}
