--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -141,6 +141,7 @@ header {
 .post-content {
   max-width: 800px;
   margin: 0 auto;
+  font-family: "Computer Modern Serif", "Latin Modern Roman", serif;
 }
 
 .post-content p {
@@ -356,25 +357,34 @@ blockquote {
 /* Computer Modern Font Setup */
 @font-face {
   font-family: 'Computer Modern Serif';
-  src: url('/assets/fonts/cmunrm.woff2') format('woff2'),
-       url('/assets/fonts/cmunrm.woff') format('woff');
+  src: url('../fonts/cmunrm.woff2') format('woff2'),
+       url('../fonts/cmunrm.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Computer Modern Serif';
-  src: url('/assets/fonts/cmunbx.woff2') format('woff2'),
-       url('/assets/fonts/cmunbx.woff') format('woff');
+  src: url('../fonts/cmunbx.woff2') format('woff2'),
+       url('../fonts/cmunbx.woff') format('woff');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Computer Modern Serif';
-  src: url('/assets/fonts/cmunti.woff2') format('woff2'),
-       url('/assets/fonts/cmunti.woff') format('woff');
+  src: url('../fonts/cmunti.woff2') format('woff2'),
+       url('../fonts/cmunti.woff') format('woff');
   font-weight: normal;
+  font-style: italic;
+}
+
+/* Add Bold-Italic if you have it */
+@font-face {
+  font-family: 'Computer Modern Serif';
+  src: url('../fonts/cmunbi.woff2') format('woff2'),
+       url('../fonts/cmunbi.woff') format('woff');
+  font-weight: bold;
   font-style: italic;
 }
 
