--- a/backup/style.scss
+++ b/backup/style.scss
@@ -1,7 +1,6 @@
 ---
 ---
-
-@import "{{ site.theme | default: 'default' }}";
+@import "minima";  // Static theme import instead of Liquid syntax
 
 /* Main color variables */
 :root {
@@ -356,27 +355,24 @@ blockquote {
   color: var(--white);
 }
 
-/* Computer Modern Font Setup */
+/* Computer Modern Font Setup (WOFF only) */
 @font-face {
   font-family: 'Computer Modern Serif';
-  src: url('/assets/fonts/cmunrm.woff2') format('woff2'),
-       url('/assets/fonts/cmunrm.woff') format('woff');
+  src: url('/assets/fonts/cmunrm.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Computer Modern Serif';
-  src: url('/assets/fonts/cmunbx.woff2') format('woff2'),
-       url('/assets/fonts/cmunbx.woff') format('woff');
+  src: url('/assets/fonts/cmunbx.woff') format('woff');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Computer Modern Serif';
-  src: url('/assets/fonts/cmunti.woff2') format('woff2'),
-       url('/assets/fonts/cmunti.woff') format('woff');
+  src: url('/assets/fonts/cmunti.woff') format('woff');
   font-weight: normal;
   font-style: italic;
 }
@@ -443,4 +439,4 @@ blockquote {
   .post-content p {
     text-align: justify;
   }
-}
+} /* Added missing closing brace here */
