--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ page.title | default: "Site" }}</title>
+  <title>{% raw %}{{ page.title | default: "Wind Energy Insights" }}{% endraw %}</title>
   <link rel="stylesheet" href="/assets/css/style.css">
-  {% if page.math %}
-    <script type="text/javascript" async
-      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML">
-    </script>
-  {% endif %}
+  {% raw %}{% if page.math %}{% endraw %}
+  <script type="text/javascript" async 
+    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
+  {% raw %}{% endif %}{% endraw %}
 </head>
 <body>
-  {{ content }}
+  {% raw %}{{ content }}{% endraw %}
 </body>
 </html>
